--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,14 @@
 # Đối với MQTT cục bộ không qua WebSocket
 BROKER_HOST=localhost
-BROKER_PORT=1883
-BROKER_TRANSPORT=tcp
+BROKER_PORT=
+BROKER_TRANSPORT=tcp or ws
 BROKER_USE_TLS=
 BROKER_WS_PATH=/
 DEVICE_ID=dev123
 MQTT_USER=device_dev123
 MQTT_PASS=dev123pass
 
-SERVER_HTTP_BASE=https://server-gpu.phuocnguyn.id.vn
+SERVER_HTTP_BASE=http://localhost:8000
 AUDIO_SAMPLE_RATE=16000
 AUDIO_CHUNK_MS=500
 
-# Cấu hình cho kết nối cloud (uncomment để sử dụng)
-# BROKER_HOST=mqtt-ws.phuocnguyn.id.vn
-# BROKER_PORT=443
-# BROKER_TRANSPORT=websockets
-# BROKER_USE_TLS=True
-# BROKER_WS_PATH=/
